feature: add follow functionality, and make blocking undoable.

--- a/src/components/User/style.css
+++ b/src/components/User/style.css
@@ -17,3 +17,6 @@
 .feature-user--blocked {
   @apply opacity-10;
 }
+.feature-user--followed {
+  @apply border-[5px] border-color-green-neutral;
+}
